--- a/web_App/conf/config.yaml
+++ b/web_App/conf/config.yaml
@@ -1,7 +1,10 @@
-app:
-  name: "web_app"
-  mode: "dev"
-  port: 8081
+name: "bluebell"
+mode: "release"
+port: 8081
+version: "v0.0.1"
+start_time: "2020-07-01"
+machine_id: 1
+
 
 log:
   level: "debug"
